1.解决多台充电桩，数据不刷新问题（充电桩软件--发送数据的地址问题） 2. 解决充电桩地址中发送数据地址问题，并为每条发送函数添加带地址的功能 3. 测试数据时，发现数据不同步，把充电桩中自定义数据发送修正了，测试数据可用此功能。 4. 对充电桩上的发送数据进行更新，进行限制

--- a/充电桩/WinForm/MoniIntFace.resx
+++ b/充电桩/WinForm/MoniIntFace.resx
@@ -357,78 +357,78 @@
   <data name="toolStripButton_User.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAADAAAAAwCAYAAABXAvmHAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABCISURBVGhD1VkJdE33vv73iCFKooZIUMFVVVNVaSmtsWYV
-        QYoq6tKBmF5LaqzcoKaaIoKYk5CIzAkhIoMh8xwikohIRBJC1VPcxPnu99snWr3XMuS9t5a31/rWPsnZ
-        e/+/7zf/91H/h4eOMKo8C/5/HCYmJoPffrt1WP/+/fOIgvbt20c3bNhwDb+qQ4igV/ewsLBwmjNn9r2c
-        nGxcvpyL8+czcPbsGfTt2/tR8+bNY3lJc6KGdvGrdtDK4+bMmXP/6tWryMq6iJSUZERHn8OpU2EIDg7C
-        smVLYGFhFiyXEq+eiI4dOyZnZWUhIyMd8fFxmuUjIsJx4sRx+Pv7Yd26tejdu/cdXtqHMCFeqbyoNXz4
-        sOvJyUk4d+4sTp+OegKnNS9s27YVc+fOQd26rzvwenPilcqHZp9/blMWGRmBkydDNctL+EgYiSj5n7e3
-        FzZt2gCGmiuvb0HU0u58RQ5dly5dsgIC/HH0aLBm+aSkJCbxeVy8mIm0tDRNFEPokZGR0Wxe34qord35
-        ihy6pk2b+s+bNwfbtzvDz89HEyHV6M6dOygqKkJCQoIIyOe1kgPNiFcqkZmQ/TpZWna7u379Wnh4HEJU
-        VCSysy/h1q1bKCwshIODw70GDRqs5LWdCalEr0oO7GhYt+4Z767dzt82M0tD8+ZjYWe3UKs8MTExWgkd
-        NMiG3zXZzIs/IiT+JXweVyHJhQ+IToR45X+9OtWrVq2auL0d8cQCh+uYmkYwIVPz6r3xAHsPAMsc9Phx
-        WQVGjDiOFi3sWfcXoXbtg1Aq/JFS0Qyfo2FKOU7jzdKVGzZv3tR/yJAh12bMmPHQ1nbmve7dP8w1MzPb
-        y+/qEf8zD9WsWbN169Z/O21tbX2jT58+j8aPH3+vc+fOXODxWLC/V69eJWxQerRspceVfKCkFMjj2dUL
-        sN+gh/06Pb6dqadX9BTxGFHZvL+TPEtKrvSOlJQUrWpJtbK37/fI0tIyntdIqa1anhgbG3dnwl1LSIj/
-        S0eVKiOVhCNDuFL/GDp7dilCjgPTv9MjJQ24mA2cvwikXgAS04FziYCzO7B0k55h9KeAFi1aRMfFxWmj
-        Rnx8vJbwx4+HMOx8tfyRNRo3bizltkq5YvTOO++kilWko0oyysP9/Hxx6NBBHDzoji+//OKhqWlHz+nT
-        S5FGokkpQHwyEJMAnIkDImOBU+eA0LPAsShguRNgZfVYgO918ab0BzFMWNhJhIaeQEhICI4dO6oZyd5+
-        OTp16igVqzUh4fbiecHQGbh8eb9H4l55uCRhUFAgz8FcIJgN6Qh++mkp2rTpnDtpcikiTpNsJHAiAggJ
-        B4JPAQFhgG8ocOQE4BkCLHYERo82CKhR4xDWrl3zh2EkbMLDT2kdPCYmGoGBASzF2zB06NC7pDOYqE+8
-        uABzc/PN7u5utMgxzRrSmAyd1bCAj4+3Nhb06NHjxhibQvgFAj6EVwDgwbM7z27EPn9gD+HiCzjsEuix
-        8Cc96td3xYoVDpVGCdKenZiYUBlOcZrRxEjiJdKxJsyIFw8jCnAUCxw+7KktIpYydNUMxMbGaO728vJk
-        nA4qa/lWAZxcSPQgiRI7DjHmCScPwJHnzTz/wrNgAz/P3Qys25VP607AgQP7NQ+I5RMTE5GZmckR/LI2
-        DEq+yV6CdKS8vpyAGjVqWEkSubm5amRlAYlXGZFlgdTUVO3/77/fM8/4jVK06sLyuQ5Yv1PIAWt2A2v3
-        8W8m7wYS33iYYFXadIRnYh2FWFiMwsKFdn907bi4WK3ZPXz4EDKOSy60atXqOOl0IV4uhHiYsH6mSpy7
-        uOzUYjIpKRHFxdfx4MEDTcSuXS7ljRu/f+z1hqV44y2gZXdg5k/Az/SGRt7NYHEhvMmHnvADthByXu9V
-        AaMBC9Duk3c53G3UwkWMlJubi5KSEo4c8ZC5ijwGEm2Il0viOWwidkZGvr27dX3k5OSoVR8Jnby8PIoo
-        1ub7Dh3aJyvVwapa7ai8Ri2vwryrHpZ9gF6TgTm/GMiLxYWwI/NhaxAFBFZgtM8mtAvshglJE9DtXDc0
-        Hd0UY2aMxjZnJ7js2YnJkyeXW/azLGBPnkoqYv0X7wVbqZQ+25jatOmde1O/QlrnzhhraQlbGxsmrRO2
-        cEMyvXfvh0OaNcvsoJQNb5EFaKF5E2vWPH275afA21ZA+y+AvnOBSWsphmG1nGL+7huIjkH98FpsdYxK
-        tELKrSSsO78SyzLm4+uYqei0sxOMdhtBxSqoVOK4KlPuKlFtVnO5xpNjx9OP6JYt7RMsLQuY9tDbfsei
-        HkMTOkC/+kdcnzUNAe3aIY7fPSDuE4lKlXEmiN2i1CTe3sTIOCy89VDgHRug0xTg/RnAh98DPRcBHzO0
-        Wu4fi1kxs7AscxkmpozHrYdlKH1QjGu/FyCy9ATWXlyMFRfn44c8W3x8pRfUBYoQ7FZsmKoJ8ey9Q7K5
-        eTbmz4fe4R/Qz6WA0mKgqAAozAOi6H/nxdA7LYR+6Vzou38IvQglPJTy4u3NjIwjQ9uMBDrQ+u99DXxA
-        D3y0EPjEnt74GbCkgISbCUgsS8DqDAfk3L2ErN8u4MKdNKT/mojk2zFIuH0G/kVuWJM1H7UyaxkE7FRn
-        +fy2xDO3oDpNAKsAotiNnNYD2ZwFsjgbXOAskEFvpJ0Bktmlju+Ffu/SPwTsV8qf97etXic8rO2YSuvP
-        BHosMFi+72pgwAYKcBuDsKKTSL+dxvBJROKtWMSVncG5m+E4c5M7uBtHcao0ACdKvbEpd9GfAtxVvvpW
-        yfD3zJFCl9CoURbSSTiFhJM4BySScDwJx7GdxhwFopmJZ72B057Qu/4pIFCp7K+YD9Xrhoe1Gwd0nmaw
-        fs/FQJ9VBvKDOUZYuo+GT/4RRJWEI6IkFGHFR3GiOAAhxd4ILvZE4HU3+F3fB+8iF6zLnYc2OW0MAs4T
-        QequOsTsmK/l3FPHbV2iqWkmokg4koQjSDichMNJ+JQnEMaaGMbaGMoaecIZeneGUtOmmgDOyMhU6vZW
-        XceyrmNvocu3QPf5htDpz94g5IexNzQ/aI3dOTsRUOgNv0JP+BS64UjhPhwudIFHoTPcC7fAtXAD9hWs
-        wercGfjp0iSsLlryp5BEYpWyJ9enekKXULdWOvxZ9wJJOICEA0k4kISDnIktBE0ZuIbfrQR2T4F+91Qm
-        +ALoLSw0IQVKh4EjktHV1hD7fXjZQHbdYXzESFeghYc13g1ug+3Zm7A/zxl787Zgz5UN2HVlDVzyV2J7
-        /nI45y/B1nw7YoGG5dkTsb1oFVQayccTS9Q6cpUXY/+R0Lq4mrpUDGBL3U+yBwkPEvYk4cNk4rWcU9kS
-        wg7wZnD7VsJpGCocl2qV6YoIGJmshU+vpUA/ltDB24AR+wFrduKWXtYwOazQ9mgjrLgwH5tzljPWl2Bj
-        rh025y3AlisL4ETS264ugHOBAdsIx8KlUEkkH0MsVBvJVaZTKat/OXRxOpWKNxX93pydh+R2k/A+Enbj
-        Z09CiPsRAUQgEUR4TkO5ox1+o4AcChg0KlkrnRI+EvtDaX0rzkdj2cxa+YxBPS8Fc3+Fd0Jex3cpVlif
-        Mx+bLv9JXkhvL1yAHdcqwc9bRUAcyZ8m7J4hIFqnkitaUMC7xJD6wAqWlAMkeYgQ8v6VpI8RIZXwmYaH
-        Tna4qeWBDkNGJ2vx39vBED7D99L6nIHGMaWmRBSh8ZausPAxQcuj9MRJhY/P1Mes84OxJf97jbyQdila
-        gF2VkM/brlHAWZKPeI6AldzinTbWnc9pbYyKPhTxGfFNI/b/4QyXHzjkk/BxIpQIq0Tg33Hf2Q5FFJAu
-        AsYmowedJtVn0FY+gnvkMbT+hJPArHgK6x3+UJnsv2/qZvqo/SmFLrRq92iFAYnGGJ9hiRmXumBR3qdY
-        fOVTfJP9NqwuGDMHKCCS5MOeLUAOKU/mnA+GplrWLMcYCphCzCQWGnMetgR2vcewGcD8+ISfW3DgqY7f
-        d9gx/hWSKGCoTbKWwFL7Jf5Hchq14f7gS7aWuamVApTv/fp7Gpd3okW70bI9OTr0ZYUZyPFhaIbCCFac
-        kZnERYXPeN5xnQKE/PHnC5DaKiLqJ7c2vo/xJP418V/EEmIV8QvhSGyrxFaFuy52uEQB8RTQr3+4JqAf
-        c3/IdkP8fx7MmYg7tu/PPxbgc7/B3sbl70UZrP9JAj2QYiAvhEdlKYy+pDAm23B2EQEhJB/8h4DnvtEz
-        Sn/L+B4mk6At8SPhQAh5J8KF2EPsJXYr/LbbjuGjwIHlUTejz10btIjMs+ybUd7j+xv0gF6L/8ncF//A
-        jf5jD4iArmcM1u/HCjOYZVIsb03CNjkKa4tHoG+KBb7Kq88c+BFqr7qh1tAP7bTt5VPL6JOHLr0NBUwj
-        wXnEMmItQWsLYbiyeUVNwY3vWP89TFHqOAucJa45KRXIbdMA3s9uadK1+uur7d/sFJ5vOSa9fIhjKeZl
-        6DF4cHy5Uu75ddzr3PvgHK3P2v4prT+M3VYsb5OrMCFPYeuNz1HraC0YBb4GM1fT66q9GsfndidkbyCb
-        m2fuzgwCviNZO2IFsYkQy7sTLIUVsbZIkLCpYwSP+vVy31TqM94nWz9ZQLZ/sojM8XS3aZfXG6y2b9sz
-        osDMbFcw577B5h7VS7qzrvdh7A+i9SV0xjJkhPykqwrOZRQQwFnIm2GzQUXzOY/f5slA99y9gUHALJJd
-        TKwhJN4PEEeIIApIssU5CogiOE7LLy5CXlz7eAHJJ7GSxKq8YasUo73Za2vuW/36RxI+yYbYF+uPu2wg
-        P/Waws7bFOBLAZ4UsFYTIO9Sn2v5x4dBgITPcmIDsYvwIAIJ1u+KdFtEkjz3A4wsxXlOe6cpRJ827j4p
-        RgSamAcYXevF5iTJO5yxLwn7xRWFrwoVvilW2H2HAo5QAD1eKeBZz/+PwyBgPslK+EjV2U/4ECcI1u6K
-        TFvqUDhGbDYIEMu+yE9GmhjzQKNrEv9SOiV8JPbF+tOvK8y4obD3vynAkwK4btUFSPX5mXAmDhJifdZu
-        1ktU5NgihOSZvC8rQA6dCOjN8inVx4r1XsJnCq3/bYnC7DIF198p4CAFsNpVXcAikpXqs5PgEEbGYOBz
-        Y6NQfsVW9gFMCcUIq5oASeAh6Yb4l+SV2Bfrz/tVwf0BBbhRAAsHy2cVBUjzktovpVOSl7Ev1gctVl5o
-        Cz+S53ayygL6sv5LAkuzkvifVqRge1Phh9/43IcUcIACtlPAqqoKkPovCSwNy5cIJ1g1QHeXl9gyJRTc
-        qiigjqcu/r2IuloOiICJ+Yb4n8XwWXBX4XB5pQCGb5UEnDYzKsi3roV/Sg7sI/wIDlTgguBi5Tdt4U3y
-        rlUUQNRRNmpAXZfXQtt5G9/pG2uKyQWG+LejAK+KJzxgyIEOxIs+X7vIZFo1NTy4me5s+Cd17l2ZWxv/
-        5Cwi8c+tF8pv/cUDsql/GQFySFkVi8oPfe3Yv62b7Kkd+WFok3uj0t/Ajjufofqu6mWM/7Oql9aFX/rt
-        nDQjWUCaUzsbnRoX1L52bPxI0/t56+vg14SJLEyqhJPVMTKX+aQqP5kKGVlHhMs+V1tLDVRWli7mgZXE
-        pUHKKxXp7s/twP9+yAIyND25QAcRc+BvDbzp06H8uyvxQvPJMw5Z59/XEs/I6CAvtOR/j7v7Uw6l/gWr
-        doAPbErhIQAAAABJRU5ErkJggg==
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAABCESURBVGhD1VkJVFX1vv53xAFTMAeENFGvmTllpqVlOeaU
+        JqGSmql1bTJMfaVkTnCxckpRRFScAQWRGRRFZHBgnkFEIEQQAUUznykXPN/9fvtA2r0uB957a/n2Wt/a
+        B87e+/99v/m/j/o/PHSEUe1Z8P/jMDExGf3SS10ihg8fXkgU9+jRI7Z169ar+VUzQgQ9vYeFhYXLvHnf
+        3MrPz8OvvxYgOzsLp0+fwuDBg+926NAhnpd0IBppFz9tB608Zd68ebcvXryI3NxzSEtLRWzsGZw4EYHQ
+        0BAsX74UFhZmoXIp8fSJ6NWrV2pubi6ysjKRmJigWT4qKhLHjh1FYGAA1q5dI564wUuHECbEU5UXTcaN
+        e+9yamoKzpw5jZMnY+7DSc0LW7Zsxvz589C8+bOOvN6ceKryof2HH9pURkdH4fjxcM3yEj4SRiJK/ufr
+        6wMnp/VgqLnz+o5EE+3Op+TQ9e3bNzcoKBCHD4dqlk9JSWESZ+PcuRxkZGRooiSZjYyMvuH1nYmm2p1P
+        yaFr165d4IIF87B1qysCAvw0EVKNbty4gdLSUiQlJYmAIl4rOdCeeKoSmQk5rLelZf+b69atgZfXAcTE
+        RCMv7zyuXbuGkpISODo63mrVqtWPvLYPIZXoacmBba2bNz/l269/9nUzswx06DAZdnaLtcoTFxenldBR
+        o2z43fMbefGbhMS/hE9dFZJceJ3oTYhX/terU4sGDRqI27sT9y1wsJmpaRQTMr2wxXN3sHsfsNxRj++X
+        12D8+KPo2NGBdf8HNG26H0pF3lUqluFzOEIp59m8Wbpy6w4d2gWOGTPm0pw5c6psbb++NWDAGwVmZma7
+        +V0L4n/mocaNG3fp0uVvJ62tra9I8k2dOvVWnz59uEDdWLB30KBB5WxQenTqrMeFIqC8Aijk2d0HcFiv
+        h8NaPb78Wk+v6CmiDjF5vL+3PEtKrvSOtLQ0rWpJtXJwGHLX0tIykddIqa1fnhgbGw8g6UtJSYl/6ahS
+        ZUQMR4ZIpf4x9ptvKhB2FPjsKz3SMoBzeUD2OSD9LJCcCZxJBlw9gWVOeobRPQEdO3aMTUhI0EaNxMRE
+        LeGPHg1j2Plr+SNrtG3bVsptvXLF6OWXX04Xq0hHlWSUhwcE+OPAgf3Yv98TH3/8UZWpaS/vzz6rQAaJ
+        pqQBialAXBJwKgGIjgdOnAHCTwNHYgB7F8DKqk6A/2XxpvQHMUxExHGEhx9DWFgYjhw5rBnJwcEevXv3
+        korVhZBwe/y8YOiMtLcfclfcKw+XJAwJCeY5lAuEsiEdwooVy9C1a5+CGTMrEHWSZKOBY1FAWCQQegII
+        igD8w4FDxwDvMGCJMzBxokFAo0YHsGbN6j8NI2ETGXlC6+BxcbEIDg5iKd6CsWPH3iSd0URL4vEFmJub
+        b/T09KBFjmjWkMZk6KyGBfz8fLWxYODAgVcm2ZQgIBjwI3yCAC+ePXn2IPYEArsIN3/AcYdAj8Ur9GjZ
+        0h0rVzrWGiVEe3ZyclJtOCVoRhMjiZdIx5owIx4/jCjAWSxw8KC3tohYytBVsxAfH6e528fHm3E6qrLT
+        i8VwcSPR/SRKbDvAmCdcvABnnjfy/AvPgvX8PH8jsHZHEa07Dfv27dU8IJZPTk5GTk4OR/BftWFQ8k32
+        EqQj5fXJBDRq1MhKksjDw10jKwtIvMqILAukp6dr/3/ttbcKjZ+rQOe+LJ9rgXXbhRyweiewZg//ZvKu
+        J/ENBwlWJadDPBNrKcTC4gMsXmz3Z9dOSIjXml1VVRVkHJdc6Ny581HS6Us8WQjxMGH9TJc4d3PbrsVk
+        Skoyysou486dO5qIHTvcqtu2fe3Is60r8NyLQKcBwNcrgJ/pDY28h8HiQtjJj54IADYRcl7nUwOjEYvQ
+        /Z1XONxt0MJFjFRQUIDy8nKOHImQuYo8RhJdiSdL4nlsInZGRv6D+/e76+LirFUfCZ3CwkKKKNPm+549
+        e6Qq1dOqQdOYwjadLsK8nx6WQ4BBM4F5vxjIi8WFsDPzYXMIBQTXYKKfE7oH98e0lGnof6Y/2k1sh0lz
+        JmKLqwvcdm3HzJkzqy2HWRazJ39KKmL9x+8Fm6mUPtuQ3q7djVuffoKMPn0w2dIStjY2TFoXbOKG5LPB
+        g6vGtG+f01MpG94iC9BCC6Y3bnzyeqd3gZesgB4fAUPnAzPWUAzDyp5i/u4fjF4hw/BMfEN8kGyFtGsp
+        WJv9I5ZnLcTncZ+i9/beMNppBBWvoNKJo6pSeapktVHN5xr3jx0PPmI7dXJIsrQsZtpDb/sVi3ocTegI
+        /arvcXnubAR1744EfneHuE0kK1XJmSB+k1IzePvzRsYRkV3GAi/bAL1nAa/NAd74FnjrB+BthlanvZMx
+        N24ulucsx/S0qbhWVYmKO2W49EcxoiuOYc25JVh5biG+K7TF2xcGQZ2lCMFOxYapnicevndINTfPw8KF
+        0Dv+A/r5FFBRBpQWAyWFQAz977oEepfF0C+bD/2AN6AXoYSXUj68vb2RcXR41wlAT1r/1c+B1+mBNxcD
+        7zjQGz8DlhSQdDUJyZVJWJXliPyb55H7+1mcvZGBzN+SkXo9DknXTyGw1AOrcxeiSU4Tg4Dt6jSf3414
+        6BZUpwlgFUAMu5HLOiCPs0AuZ4OznAWy6I2MU0Aqu9TR3dDvXvangL1KBfL+bg2bRUZ0m1Rr/a+BgYsM
+        lh+6ChixngI8JiGi9Dgyr2cwfJKRfC0eCZWncOZqJE5d5Q7uymGcqAjCsQpfOBX8cE+ApypSXyoZ/h46
+        UuiS2rTJRSYJp5FwCueAZBJOJOEEttO4w0AsM/G0L3DSG3r3ewKClcr7hPnQsHlkRPcpQJ/ZBuu/tQQY
+        8pOB/GiOEZaeE+FXdAgx5ZGIKg9HRNlhHCsLQliZL0LLvBF82QMBl/fAt9QNawsWoGt+V4OAbCJE3VQH
+        mB0LtZx74LitSzY1zUEMCUeTcBQJR5JwJAmf8AYiWBMjWBvDWSOPuULvyVBq104TwBkZOUpd36zrVdlv
+        8jX0/RIYsNAQOsPZG4T8e+wNHfZbY2f+dgSV+CKgxBt+JR44VLIHB0vc4FXiCs+STXAvWY89xauxqmAO
+        VpyfgVWlS+8JSSZ+Ug7k+kBP6JKaN8lEIOteMAkHkXAwCQeTcIgrsYmgKYNX87sfgZ2zoN/5KRN8EfQW
+        FpqQYqXDyPGp6GdriP0hvGwku+57fMQEd6CjlzVeCe2KrXlO2Fvoit2Fm7DrwnrsuLAabkU/YmuRPVyL
+        lmJzkR2xSIN93nRsLf0JKoPkE4mlai25youx/0hoXUJjXTpGsKXuJdn9hBcJe5PwQTLxsedUtpSwA3wZ
+        3P61cHkPNc7LtMp0QQRMSNXCZ9AyYBhL6OgtwPi9gDU7cScfa5gcVOh2uA1Wnl2Ijfn2jPWl2FBgh42F
+        i7DpwiK4kPSWi4vgWmzAFsK5ZBlUCsnHEYvVBnKV6VTK6l8OXYJOpeMFRb93YOchuZ0kvIeEPfjZmxDi
+        AUQQEUyEEN6zUe1sh98pIJ8CRn2QqpVOCR+J/bG0vhXno8lsZp39JqGFj4J5oMLLYc/iqzQrrMtfCKdf
+        75EX0ltLFmHbpVrw82YRkEDyJwm7hwiI1anUmo4U8AoxpiWwkiVlH0keIIR8YC3pI0RYLfxmo8rFDle1
+        PNBhzMRULf4HOxrCZ9xuWp8z0BSm1KyoUrTd1A8WfibodJieOK7w9qmWmJs9GpuKvtXIC2m30kXYUQv5
+        vOUSBZwm+ahHCPiRW7yTxrrs/C7GqBlCEe8TX7Rh/x/HcPmOQz4JHyXCiYhaBP8dt13tUEoBmSJgcioG
+        0mlSfUZt5iO4R55E6087DsxNpLDBkVXKZO9tUw/Tuz1OKPSlVQfEKoxINsbULEvMOd8XPxS+iyUX3sUX
+        eS/B6qwxc4ACokk+4uEC5JDyZM75YGy6ZeNqTKKAWcTXxGJjzsOWwI5XGTYjmB/v8HNHDjwN8cc2O8a/
+        QgoFjLVJ1RJYar/E/wROozbcH3zM1jI/vVaA8r/dclfb6t60aH9a9i2ODkNZYUZyfBibpTCeFWdCDnFO
+        4X2et12mACF/9NECpLaKiJapXYxvYyqJf078F7GU+In4hXAmttRis8JNNzucp4BEChg2PFITMIy5P2ar
+        If4/DOVMxB3bt9l1Avxut9rdtvrVGIP130miB9IM5IXwB7kKE88rTMoznN1EQBjJh/4p4JFv9IwyXzS+
+        hZkkaEt8TzgSQt6FcCN2EbuJnQq/77Rj+ChwYLnb3+hD91Ydowsth2ZVD/z2Cj2g1+J/JvfF33GjX+cB
+        EdDvlMH6w1hhRrNMiuWtSdgmX2FN2XgMTbPAJ4UtmQPfQ+1WV9Rq+qG7tr18YBm9/9BldqWA2SS4gFhO
+        rCFobSEMdzavmFm48hXrv5cpKpzngrPEJRelgrltGsH72S1N+jV8dpXDC70jiywnZVaPca7Agiw9Ro9O
+        rFbKs6iZZ7Nbr5+h9Vnb36X132O3FcvbFChMK1TYfOVDNDncBEbBz8DM3fSy6qGm8LkDCNkbyObmobsz
+        g4CvSNaOWEk4EWJ5T4KlsCbeFkkSNs2M4NWyRcELSr3P+2TrJwvI9k8WkTme7jbt+2yrVQ7d3ooqNjPb
+        Ecq5b7S5V8PyAazrQxj7o2h9CZ3JDBkhP+OigmslBQRxFvJl2KxXsXxO3ds8GegeuTcwCJhLskuI1YTE
+        +z7iEBFCASm2OEMBMQTHafnFRciLa+sWkHwSK0msyhu2WjHam71u5v4NL78p4ZNqiH2x/pRfDeQ/vaSw
+        /ToF+FOANwWs0QTIu9RHWr7uMAiQ8LEn1hM7CC8imGD9rsm0RTTJcz/AyFKc57R3mkL0QePu/WJEoIl5
+        kNGlQWxOkrzjGPuSsB9dUPikROGLMoWdNyjgEAXQ47UCHvb8/zgMAhaSrISPVJ29hB9xjGDtrsmxpQ6F
+        I8RGgwCx7OP8ZKSJMQ82uiTxL6VTwkdiX6z/2WWFOVcUdv83BXhTANetvwCpPj8TrsR+QqzP2s16iZp8
+        W4SRPJP3SQXIoRMBg1k+pfpYsd5L+Myi9b8sV/imUsH9DwrYTwGsdvUX8APJSvXZTnAII2Mw8LmxUai+
+        YCv7AKaEYoTVT4Ak8JhMQ/xL8krsi/UX/KbgeYcCPCiAhYPls54CpHlJ7ZfSKcnL2BfrgxarLrFFAMlz
+        O1lvAUNZ/yWBpVlJ/M8uVbC9qvDd73xuFQXso4CtFPBTfQVI/ZcEloblT0QSrBqgu6vLbZkSCh71FNDM
+        W5f4alRzLQdEwPQiQ/zPZfgsuqlwsLpWAMO3XgJOmhkVF1k3wT8lB/YQAQQHKnBBcLHqq7bwJXn3egog
+        mikbNaK52zPh3X2NbwyNN8XMYkP821GAT819HjDkQE/icZ+vXWQyu4EaF9pedzrynWa3Lsxvin9yFpH4
+        59YL1df+4gHZ1D+JADmkrIpF5Ye+7uzf1s/vahr9Rvjztz7IfA7bbryPhjsaVjL+T6tBWhd+4rdz0oxk
+        AWlO3W10akpIj6bxiRNMbxeua4bfkqazMKlyTlZHyFzmk/r8ZCpkZB0RLvtcbS01UllZupkH1xKXBimv
+        VKS7P7ID//shC8jQdP8CPUXMvr+18qVPx/LvfsRjzScPOWSdf19LPCOjg7zQkv/VdfcHHEr9C2qVgAQO
+        t52SAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="toolStripButton_Curve.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
